Pretty much ready to deploy

--- a/views/addFriend.handlebars
+++ b/views/addFriend.handlebars
@@ -86,10 +86,10 @@
                                             <div class="select">
                                                 <select class="form-control" id="emoji" type="button" name="emoji">
 
-                                                    <option value="newFriend">New Friend</option>
+                                                
                                                     <option value="significantOther">Significant Other</option>
-                                                    <option value="homie">Friend</option>
-                                                    <option value="family">Family</option>
+                                                    <option value="friend">Friend</option>
+                                                  
                                                     <option value="colleague">Colleague</option>
                                                     <option value="bestFriend">Best Friend</option>
                                                 </select>
