--- a/views/question/categories.handlebars
+++ b/views/question/categories.handlebars
@@ -1,12 +1,12 @@
 <nav class="navbar sticky-top navbar-light lighten-4">
 
     <a href="/home/{{user_id}}">
-        <button type="button" class="navbar-brand white btn btn-outline-dark waves-effect">Play with another friend
+        <button type="button" class="navbar-brand white btn btn-outline-dark waves-effect font20">Play with another friend
         </button>
     </a>
 </nav>
 
-<div class="container z-depth-1 my-5 py-5">
+<div class="container z-depth-1 my-5 py-5 font17">
     <!-- Section -->
     <section>
         <style>
@@ -29,7 +29,7 @@
 
                 <i class="fas fa-3x fa-bolt light-blue-text"></i><br /><br />
                 <a class="dark-grey-text" href="/play/friends/{{user_id}}/{{friend_id}}">
-                    <button type="button" class="btn btn-outline-dark waves-effect">
+                    <button type="button" class="btn btn-outline-dark waves-effect font20">
                         converse
                     </button>
                 </a>
@@ -44,7 +44,7 @@
                 <i class="fas fa-book fa-3x teal-text pr-2"></i><br />
                 <br />
                 <a class="dark-grey-text" href="/play/work/{{user_id}}/{{friend_id}}">
-                    <button type="button" class="btn btn-outline-dark waves-effect">
+                    <button type="button" class="btn btn-outline-dark waves-effect font20">
                         converse
                     </button>
                 </a>
@@ -59,7 +59,7 @@
                 <h5 class="font-weight-normal border-top border-light pt-4 mb-4"><a class="dark-grey-text" href="#">Family</a></h5>
                 <i class="fas fa-3x fa-home deep-orange-text pr-2"></i><br /><br />
                 <a class="dark-grey-text" href="/play/family/{{user_id}}/{{friend_id}}">
-                    <button type="button" class="btn btn-outline-dark waves-effect">
+                    <button type="button" class="btn btn-outline-dark waves-effect font20">
                         converse
                     </button>
                 </a>
@@ -76,7 +76,7 @@
                 <i class="far fa-3x fa-heart deep-purple-text"></i>
                 <br /><br />
                 <a class="dark-grey-text" href="/play/love/{{user_id}}/{{friend_id}}">
-                    <button type="button" class="btn btn-outline-dark waves-effect">
+                    <button type="button" class="btn btn-outline-dark waves-effect font20">
                         converse
                     </button>
                 </a>
@@ -89,7 +89,7 @@
                 <i class="fas fa-rocket fa-3x red-text pr-2"></i><br />
                 <br />
                 <a class="dark-grey-text" href="/favorites/{{user_id}}/{{friend_id}}">
-                    <button type="button" class="btn btn-outline-dark waves-effect">
+                    <button type="button" class="btn btn-outline-dark waves-effect font20">
                         converse
                     </button>
                 </a>
